Adjusted column padding and Type List z-index to  prevent Pokemon image from overlapping types.

--- a/src/components/PokemonList.module.css
+++ b/src/components/PokemonList.module.css
@@ -4,4 +4,5 @@
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 18px;
     grid-row-gap: 18px;
+    padding: 0 12px;
 }
