--- a/src/components/TypeList.module.css
+++ b/src/components/TypeList.module.css
@@ -2,6 +2,8 @@
     list-style-type: none;
     padding: 0;
     overflow: auto;
+    position: relative;
+    z-index: 2;
 }
 
     .type-list li{
