--- a/src/components/pokemon-detail/DetailCard.module.css
+++ b/src/components/pokemon-detail/DetailCard.module.css
@@ -85,7 +85,7 @@
 
 .detail-content{
     background-color: #fff;
-    padding:25px 5% 0 5%;
+    padding:25px 5% 30px 5%;
     color:#313943;
     min-height: 300px;
 }
